docs/envoy/v1.14.0/_sources/api-v3/admin/v3/memory.proto.rst.txt
.. _envoy_v3_api_file_envoy/admin/v3/memory.proto:

Memory
======


.. _envoy_v3_api_msg_admin.v3.Memory:

admin.v3.Memory
---------------

`[admin.v3.Memory proto] <https://github.com/envoyproxy/envoy/blob/v1.14.0/api/envoy/admin/v3/memory.proto#L18>`_

Proto representation of the internal memory consumption of an Envoy instance. These represent
values extracted from an internal TCMalloc instance. For more information, see the section of the
docs entitled ["Generic Tcmalloc Status"](https://gperftools.github.io/gperftools/tcmalloc.html).

.. code-block:: json

  {
    "allocated": "...",
    "heap_size": "...",
    "pageheap_unmapped": "...",
    "pageheap_free": "...",
    "total_thread_cache": "...",
    "total_physical_bytes": "..."
  }

.. _envoy_v3_api_field_admin.v3.Memory.allocated:

allocated
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes allocated by the heap for Envoy. This is an alias for
  `generic.current_allocated_bytes`.
  
  
.. _envoy_v3_api_field_admin.v3.Memory.heap_size:

heap_size
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes reserved by the heap but not necessarily allocated. This is an alias for
  `generic.heap_size`.
  
  
.. _envoy_v3_api_field_admin.v3.Memory.pageheap_unmapped:

pageheap_unmapped
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes in free, unmapped pages in the page heap. These bytes always count towards
  virtual memory usage, and depending on the OS, typically do not count towards physical memory
  usage. This is an alias for `tcmalloc.pageheap_unmapped_bytes`.
  
  
.. _envoy_v3_api_field_admin.v3.Memory.pageheap_free:

pageheap_free
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes in free, mapped pages in the page heap. These bytes always count towards
  virtual memory usage, and unless the underlying memory is swapped out by the OS, they also
  count towards physical memory usage. This is an alias for `tcmalloc.pageheap_free_bytes`.
  
  
.. _envoy_v3_api_field_admin.v3.Memory.total_thread_cache:

total_thread_cache
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The amount of memory used by the TCMalloc thread caches (for small objects). This is an alias
  for `tcmalloc.current_total_thread_cache_bytes`.
  
  
.. _envoy_v3_api_field_admin.v3.Memory.total_physical_bytes:

total_physical_bytes
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes of the physical memory usage by the allocator. This is an alias for
  `generic.total_physical_bytes`.
  
  

